<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordlyPost</string>
    <string name="app_des1">Be Better Informed</string>
    <string name="app_des2">Copyrights Reserved By WorldyPost</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Global strings -->
    <string name="task_error_msg">OOPS! No data found.</string>
    <string name="error">error</string>
    <string name="google_analytics_error">Google Analatics Exception</string>
    <string name="click_back_agiain_to_exit">Please click BACK again to exit</string>
    <string name="loading">Loading&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="no_internet">No network connection enabled.</string>
    <string name="please_wait">Please wait</string>
    <string name="pst_comments">comments</string>
    <string name="pst_id">postId</string>
    <string name="tags"><![CDATA[<b>Tags :&#160;</b>]]></string>
    <string name="tagSlug">TagSlug</string>
    <string name="Y">Y</string>
    <string name="N">N</string>

    <!-- custom_fonts xml strings -->
    <string name="Helvetica">fonts/HelveticaNeueLTStd-Lt_0.ttf</string>
    <string name="Arial">fonts/arial.ttf</string>
    <string name="DroidSerif">fonts/DroidSerif-Italic.ttf</string>
    <string name="DroidSerif_Bold">fonts/DroidSerif-Bold.ttf</string>

    <!-- Google analytics screen names -->
    <string name="tabs_activity_screen_name">Tabs Activity</string>
    <string name="splash_screen_name">Splash Screen</string>
    <string name="recent_posts_screen_name">Recent Posts</string>
    <string name="search_posts_screen_name">Search Posts</string>
    <string name="about_wordlypost_screen_name">About WordlyPost</string>
    <string name="privacy_policy_screen_name">Privacy Policy</string>
    <string name="tag_posts_screen_name">Tag Posts</string>
    <string name="home_fragment_screen_name">Home</string>
    <string name="comment_view_screen_name">Comment View</string>
    <string name="settings_screen_name">Settings</string>

    <!-- tabs xml strings -->
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="search_hint">Search</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_this_app">Rate this app in Play Store</string>
    <string name="app_settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="title_activity_tabs">WordlyPost</string>
    <string name="share_subject">Check out The WordlyPost app for Android</string>
    <string name="share_text">Hi, I am using The WordlyPost Android app. Why don\'t you check it out on your Android phone.\nhttps://play.google.com/store/apps/details?id=com.wordlypost</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=com.wordlypost</string>

    <!-- category_posts_fragment.xml -->
    <string name="title_activity_category_posts_fragment">Category Posts</string>
    <string name="no_posts_error_msg">No Posts are available.</string>

    <!-- post_view.xml -->
    <string name="title_activity_post_view">Post View</string>
    <string name="read_comments">Read %1$d</string>
    <string name="post_comments">Post a comment</string>
    <string name="related_articals">Related Articals</string>
    <string name="share">Share</string>

    <!-- post_comment_popup.xml -->
    <string name="post_comment_heading">Post Comment</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
    <string name="post_comment_success_msg">Your comment submitted.</string>
    <string name="name_empty_error_msg">Enter your name.</string>
    <string name="email_empty_error_msg">Enter email address.</string>
    <string name="comment_empty_error_msg">Enter your comment.</string>
    <string name="invalid_email_error_msg">Inavalid email</string>

    <!-- post_view.xml -->
    <string name="title_activity_post_view_swipe"></string>
    <string name="comments">&#160;comments</string>
    <string name="pv_comment">&#160;comment</string>
    <string name="title_activity_search_post">Search Post</string>

    <!-- about_wordly_post.xml -->
    <string name="title_activity_about_wordly_post">About WordlyPost</string>
    <string name="about_wordly_post"><![CDATA[<p style=\"text-align: justify;\">Dear Reader,</p>\n<p style=\"text-align: justify;\">Thanks for taking few minutes of time to know About Us. We here at WordlyPost, comprise with dedicated small team; who strive for, to provide you with impeccable news across happenings in regional, national and around the globe.</p>\n<p style=\"text-align: justify;\">From eye-opening social causes to with life changing technologies, we bring you with clear cut and interesting stories by upholding self-editorial guidelines at par with self-regulated standards to ensure our reader interests are served with vision to Be Better Informed.</p>\n<p style=\"text-align: justify;\">For queries, contact us at : info@wordlypost.in</p>\n<p style=\"text-align: justify;\">Thanks,<br />\nThe Editor.</p>]]></string>
    <string name="wordly_post_privacy_policy"><![CDATA[<p style=\"text-align: center;\"><strong>Cookies & 3rd Party Advertisements</strong></p>\n<p style=\"text-align: justify;\">Google, as a third party vendor, uses cookies to serve ads on your site. Google’s use of the DART cookie enables it to serve ads to your users based on their visit to your sites and other sites on the Internet. Users may opt out of the use of the DART cookie by visiting the <a href=\"http://www.google.com/privacy_ads.html\" target=\"_blank\" rel=\"nofollow\">Google ad and content network privacy policy</a>.</p>\n<p style=\"text-align: justify;\">We allow third-party companies to serve ads and/or collect certain anonymous information when you visit our web site. These companies may use non-personally identifiable information (e.g., click stream information, browser type, time and date, subject of advertisements clicked or scrolled over) during your visits to this and other Web sites in order to provide advertisements about goods and services likely to be of greater interest to you. These companies typically use a cookie or third party web beacon to collect this information. To learn more about this behavioral advertising practice or to opt-out of this type of advertising, you can visit <a href=\"http://www.networkadvertising.org/managing/opt_out.asp\" target=\"_blank\" rel=\"nofollow\">http://www.networkadvertising.org/managing/opt_out.asp</a>.</p>]]></string>
    <string name="title_activity_recent_posts">Recent Posts</string>

    <!-- comment_view.xml -->
    <string name="title_activity_comment_view">Comment View</string>
    <string name="comments_count">Comments (%1$d)</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_tag_posts">Tag Posts</string>
    <string name="title_activity_home_fragment">Home</string>
    <string name="title_activity_post_view_notification">PostView</string>

    <!-- AdMob unit ids -->
    <string name="home_banner_unit_id">ca-app-pub-6058638697889796/8547304065</string>
    <string name="category_posts_banner_unit_id">ca-app-pub-6058638697889796/3419100467</string>
    <string name="about_us_banner_unit_id">ca-app-pub-6058638697889796/6372566863</string>
    <string name="privacy_policy_banner_unit_id">ca-app-pub-6058638697889796/7849300068</string>
    <string name="recent_posts_banner_unit_id">ca-app-pub-6058638697889796/3279499662</string>
    <string name="search_posts_banner_unit_id">ca-app-pub-6058638697889796/4756232867</string>
    <string name="post_view_banner_unit_id">ca-app-pub-6058638697889796/6093365260</string>
    <string name="home_interstitial_unit_id">ca-app-pub-6058638697889796/3977503660</string>
    
    <!-- settings.xml -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_heading">Select Minimum 3 and Maximum 5 categories</string>
    <string name="five_categories_error_msg">Select five categories only</string>
    <string name="min_three_max_five_categories_error_msg">Select minimum 3 maximum 5 categories</string>

</resources>