<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wordlypost.TabsActivity" >

    <!-- Search Widget -->
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/share_this_app"
        android:orderInCategory="100"
        android:title="@string/share_this_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/rate_this_app"
        android:orderInCategory="100"
        android:title="@string/rate_this_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_us"
        android:orderInCategory="100"
        android:title="@string/about_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/terms_of_use"
        android:orderInCategory="100"
        android:title="@string/terms_of_use"
        app:showAsAction="never"/>
    <item
        android:id="@+id/privacy_policy"
        android:orderInCategory="100"
        android:title="@string/privacy_policy"
        app:showAsAction="never"/>

</menu>