<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/post_comment_layout_padding" >

    <com.wordlypost.textview.HelveticaBold
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_comment_heading"
        android:textColor="@color/brown"
        android:textSize="@dimen/post_comment_heading_textsize" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="@dimen/post_comment_name_margin_top"
        android:background="@drawable/textlines"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:padding="@dimen/post_comment_email_padding"
        android:textColorHint="@color/post_comment_text_color"
        android:textSize="@dimen/post_comment_email_textsize" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="@dimen/post_comment_email_margin_top"
        android:background="@drawable/textlines"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/post_comment_email_padding"
        android:textColorHint="@color/post_comment_text_color"
        android:textSize="@dimen/post_comment_email_textsize" >
    </EditText>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/post_comment_height"
        android:layout_alignLeft="@+id/emailAddress"
        android:layout_below="@+id/emailAddress"
        android:layout_marginTop="@dimen/post_comment_margin_top"
        android:background="@drawable/textlines"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/comment"
        android:inputType="textPostalAddress"
        android:paddingLeft="@dimen/post_comment_padding_left"
        android:paddingTop="@dimen/post_comment_padding_top"
        android:textColorHint="@color/post_comment_text_color"
        android:textSize="@dimen/post_comment_textsize" />

    <Button
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="@dimen/post_comment_button_height"
        android:layout_below="@+id/comment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/post_comment_button_margin_top"
        android:background="@drawable/brown_button"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="@dimen/post_comment_button_textsize"
        android:textStyle="bold" />

</RelativeLayout>